--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -11,13 +11,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pylint
+          pip install -r requirements.txt
+          pip install -r requirements-tests.txt
       - name: Analysing the code with pylint
         run: |
           pylint $(git ls-files '*.py')
