--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,8 @@ jobs:
           python -m unittest discover -s tests -p '*_tests.py' -v
 
   release:
-
+    needs: test
+    if: ${{ needs.result == "success" }}
     runs-on: ubuntu-latest
 
     permissions:
