--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          sudo apt-get install -y libcurl4-dev
+          sudo apt-get install -y libcurl4-openssl-dev
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements-tests.txt
