ci: fix release workflow
[skip ci]

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
 
   release:
     needs: test
-    if: ${{ needs.result == "success" }}
+    if: ${{ needs.test.result == "success" }}
     runs-on: ubuntu-latest
 
     permissions:
