fix: fix for pylint

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -25,4 +25,4 @@ jobs:
           pip install -r requirements-tests.txt
       - name: Analysing the code with pylint
         run: |
-          pylint $(git ls-files '*.py')
+          pylint curlreq
