--- a/.pylintrc
+++ b/.pylintrc
@@ -434,6 +434,7 @@ disable=fixme,
         suppressed-message,
         useless-suppression,
         deprecated-pragma,
+        too-few-public-methods,
         use-symbolic-message-instead,
         use-implicit-booleaness-not-comparison-to-string,
         use-implicit-booleaness-not-comparison-to-zero
